test/sema/negative/borrowsema/borrow_subscope.impala
fn f() -> () {
    let mut a = 4;
    let b: &int;

    if a > 5 {
        b = &a;
    }

    a = 9;
}
